[package]
name = "wstest"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.130", default-features = false, features = ["derive"] }
serde_json = "1.0.72"
actix = "0.13"
actix-web = "4"
actix-web-actors = "4.1"